# Proiect-OOP

./: Astronaut.cpp  Astronaut.h  CMakeLists.txt  Cometa.cpp  Cometa.h  EntitateCosmica.cpp  EntitateCosmica.h  Entity.cpp  Entity.h  GameUtils.h  HartaVizualizator.cpp  HartaVizualizator.h  Item.cpp  Item.h  Leaderboard.cpp  Leaderboard.h  Map.cpp  Map.h  NavaSpatiala.cpp  NavaSpatiala.h  ObiectCelest.cpp  ObiectCelest.h  Planeta.cpp  Planeta.h  Player.cpp  Player.h  Punct.cpp  Punct.h  README.md  Room.cpp  Room.h  SistemStelar.cpp  SistemStelar.h  Stea.cpp  Stea.h  main.cpp
.github/workflows/: cmake.yml
